Crash on multires more than million #46851

Closed
opened 2015-11-23 21:40:03 +01:00 by Erick Tukuniata · 7 comments

System Information
Operating system and graphics card: Win7 gtx 550ti and Win8 AMD64

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen) : 23.11.2015 hash: 39957b8
Worked: (optional): 21.11. 2015 hash: 48f298f

Short description of error
Crash on multires when face number is more than a million.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

So basically in windows with the default cube go to sculpt mode, add a multires modifier, subdivide 9 times then blender crashes on both machine.

**System Information** Operating system and graphics card: Win7 gtx 550ti and Win8 AMD64 **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) : 23.11.2015 hash: 39957b8 Worked: (optional): 21.11. 2015 hash: 48f298f **Short description of error** Crash on multires when face number is more than a million. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps So basically in windows with the default cube go to sculpt mode, add a multires modifier, subdivide 9 times then blender crashes on both machine.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Added subscriber: @lazymouse

Added subscriber: @lazymouse

confirmed on win 7 gts 450.

confirmed on win 7 gts 450.

This issue was referenced by edb2e96cd5

This issue was referenced by edb2e96cd52e298cd24ee6df2f9281a994492771

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks sergey, it is working well again :)

Thanks sergey, it is working well again :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46851
No description provided.